Remove logos, fix captions and REST acronym

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -32,7 +32,7 @@ The current implementation of the meta predictor increments the score of the pre
 \begin{figure}[htbp!]
 	\centering
 	\input{assets/tikz/saturating-counter.tikz}
-	\caption{Saturating counter with three states}
+	\caption{Saturating counter with three states.}
 	\label{fig:saturating-counter}
 \end{figure}
 
