--- a/paper/evaluation/data-collection/travis.tex
+++ b/paper/evaluation/data-collection/travis.tex
@@ -14,7 +14,7 @@ We can answer the first three research questions by analysing data from projects
 	\subfloat[MapReduce pipeline to find the average duration of a successful test run.]{%
 		\includegraphics[width=\textwidth]{assets/tikz/eval-rq2-mapreduce.tikz}
 	}
-	\caption{MapReduce pipelines for \travisci{} data}
+	\caption{MapReduce pipelines for \travisci{} data.}
 	\label{fig:eval-mapreduce}
 \end{figure}
 
