--- a/paper/evaluation/results.tex
+++ b/paper/evaluation/results.tex
@@ -8,7 +8,7 @@ The two pie charts in \Cref{fig:rq1-failure-probability} illustrate the amount o
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=\textwidth]{assets/charts/rq1-failure-probability.pdf}
-	\caption{Probability of test run failure}
+	\caption{Probability of test run failure.}
 	\label{fig:rq1-failure-probability}
 \end{figure}
 
@@ -31,7 +31,7 @@ The dataset by Durieux et al. \cite{travisanalysis} has been refined to only inc
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=\textwidth]{assets/charts/rq2-test-run-durations.pdf}
-	\caption{Test run durations on \travisci{}}
+	\caption{Test run durations on \travisci{}.}
 	\label{fig:rq2-durations}
 \end{figure}
 
@@ -42,7 +42,7 @@ Because the TravisTorrent project is the only dataset that contains the identifi
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=\textwidth]{assets/charts/rq3-consecutive-failure.pdf}
-	\caption{Consecutive test run failures on \travisci{}}
+	\caption{Consecutive test run failures on \travisci{}.}
 	\label{fig:rq3-consecutive-failure}
 \end{figure}
 
@@ -99,18 +99,21 @@ After executing the $\SI{120}{}$ failed test runs, the log files have been inspe
 	\subfloat[Alpha algorithm]{%
 		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-alpha.pdf}
 	}
+	\phantomcaption
 \end{figure}
 \begin{figure}[!hbp]
 	\ContinuedFloat
 	\subfloat[Greedy algorithm]{%
 		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-greedy.pdf}
 	}
+	\phantomcaption
 \end{figure}
 \begin{figure}[!hbp]
 	\ContinuedFloat
 	\subfloat[HGS algorithm]{%
 		\includegraphics[width=\textwidth]{assets/charts/rq4-dodona-hgs.pdf}
 	}
+	\phantomcaption
 \end{figure}
 \begin{figure}[!t]
 	\ContinuedFloat
@@ -243,18 +246,21 @@ The data collection phase has already proven that the Java agent is compatible w
 	\subfloat[Alpha algorithm]{%
 		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-alpha.pdf}
 	}
+	\phantomcaption
 \end{figure}
 \begin{figure}[!hbp]
 	\ContinuedFloat
 	\subfloat[Greedy algorithm]{%
 		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-greedy.pdf}
 	}
+	\phantomcaption
 \end{figure}
 \begin{figure}[!hbp]
 	\ContinuedFloat
 	\subfloat[HGS algorithm]{%
 		\includegraphics[width=\textwidth]{assets/charts/rq5-stratego-hgs.pdf}
 	}
+	\phantomcaption
 \end{figure}
 \begin{figure}[!hbp]
 	\ContinuedFloat
