--- a/paper/related-work/algorithms/hgs.tex
+++ b/paper/related-work/algorithms/hgs.tex
@@ -10,7 +10,7 @@ The second algorithm is the HGS algorithm. The algorithm was named after its cre
 \clearpage
 
 \begin{algorithm}[ht!]
-\caption{HGS algorithm (\cite{hgs})}
+\caption{HGS algorithm (\cite{hgs}).}
 \label{alg:hgs}
 \begin{algorithmic}[1]
 	\Require{distinct test groups $CTD$, total amount of test cases $nt = Card(TS)$}
