--- a/paper/related-work/approaches/tcp.tex
+++ b/paper/related-work/approaches/tcp.tex
@@ -18,6 +18,6 @@ Both \acrshort{tsm} and \acrshort{tcs} attempt to execute as few tests as possib
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=\textwidth]{assets/tikz/approach-tcp.tikz}
-	\caption{\tcp{}}
+	\caption{\tcp{}.}
 	\label{fig:tcp}
 \end{figure}
