--- a/paper/related-work/approaches/tcs.tex
+++ b/paper/related-work/approaches/tcs.tex
@@ -18,7 +18,7 @@ The second approach closely resembles the previous one. However, instead of perm
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=\textwidth]{assets/tikz/approach-tcs.tikz}
-	\caption{\tcs{}}
+	\caption{\tcs{}.}
 	\label{fig:tcs}
 \end{figure}
 
