--- a/paper/related-work/approaches/tsm.tex
+++ b/paper/related-work/approaches/tsm.tex
@@ -35,6 +35,6 @@ The first technique is called \acrfull{tsm}, also referred to as \emph{Test Suit
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=\textwidth]{assets/tikz/approach-tsm.tikz}
-	\caption{\tsm{}}
+	\caption{\tsm{}.}
 	\label{fig:tsm}
 \end{figure}
