--- a/paper/software-engineering/agile-software-development/continuous-integration/jenkins.tex
+++ b/paper/software-engineering/agile-software-development/continuous-integration/jenkins.tex
@@ -6,6 +6,6 @@ Jenkins CI\footnote{\url{https://jenkins.io/}}, ``the leading open source automa
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[width=0.45\textwidth]{assets/images/jenkins.pdf}
-	\caption{Logo of Jenkins CI (\url{https://jenkins.io/})}
+	\caption{Logo of Jenkins CI (\url{https://jenkins.io/}).}
 	\label{fig:jenkins}
 \end{figure}
