--- a/paper/velocity/high-level-overview.tex
+++ b/paper/velocity/high-level-overview.tex
@@ -5,7 +5,7 @@
 \begin{figure}[htbp!]
 	\centering
 	\includegraphics[height=\textheight]{assets/diagrams/sequence-diagram.pdf}
-	\caption{Sequence diagram of \velocity{}}
+	\caption{Sequence diagram of \velocity{}.}
 	\label{fig:velocity-sequence-diagram}
 \end{figure}
 
