--- a/paper/software-engineering/sdlc.tex
+++ b/paper/software-engineering/sdlc.tex
@@ -29,18 +29,18 @@ An implementation of the SDLC typically consists of several phases and a model t
 Software regressions and other functional bugs can ultimately incur disastrous effects, such as severe financial loss or permanent damage to the reputation of the software company. The most famous example in history is without any doubt the explosion of the Ariane 5-rocket, which was caused by an integer overflow \cite{581900}. In order to reduce the risk of bugs, we should be able to detect malfunctioning components as soon as possible to warden the application against potential failures before they occur. Consequently, we must consider the testing phase as the most critical phase of the entire development process and therefore include sufficient test cases in the application. The collection of all the test cases in an application is referred to as the \emph{\gls{testsuite}}. We can distinguish many different types of test cases. This thesis will consider three categories in particular.
 
 \subsubsection{Unit tests}
-This is the most basic test type. The purpose of a unit test is to verify the behaviour of an individual component \cite{whittaker2000}. As a result, the scope of a unit test is limited to a small and isolated piece of code, e.g. one function. Implementation-wise, a unit test is typically an example of a \gls{whiteboxtest} \cite[p.~12]{6588537}. The term white-box indicates that the creator of the test case can manually inspect the code before constructing the test. As such, they can identify necessary edge values or corner cases. Common examples of these edge values include zero, negative numbers, empty arrays or array boundaries that might cause an overflow. Once the developer has identified the edge cases, they can construct the unit test by repeatedly calling the function under test, each time with a different (edge) argument value, and afterwards verifying its behaviour and result. These verifications are referred to as \emph{assertions}. \Cref{lst:se-unit-test} contains an example of a unit test, written in Java using the popular JUnit test framework.
+This is the most basic test type. The purpose of a unit test is to verify the behaviour of an individual component \cite{whittaker2000}. As a result, the scope of a unit test is limited to a small and isolated piece of code, e.g. one function. Implementation-wise, a unit test is typically an example of a \gls{whiteboxtest} \cite[p.~12]{6588537}. The term white-box indicates that the creator of the test case can manually inspect the code before constructing the test. As such, they can identify necessary edge values or corner cases. Common examples of these edge values include zero, negative numbers, empty arrays or array boundaries that might cause an overflow. Once the developer has identified the edge cases, they can construct the unit test by repeatedly calling the function under test, each time with a different (edge) argument value, and afterwards verifying its behaviour and result. These verifications are referred to as \emph{assertions}. \Cref{lst:se-unit-test} contains a unit test written in Java using the popular JUnit test framework.
 	
-\lstinputlisting[caption=Example of a Java unit test in JUnit., label=lst:se-unit-test, language=Java]{assets/listings/example-unit-test.java}
+\lstinputlisting[caption=Java unit test in JUnit., label=lst:se-unit-test, language=Java]{assets/listings/example-unit-test.java}
 
 \subsubsection{Integration tests}
 The second category involves a more advanced type of tests. An integration test validates the interaction between two or more individual components \cite{whittaker2000}. Ideally, accompanying unit tests should exist that test these components as well. As opposed to the previous unit tests, a developer will usually implement an integration test as a \gls{blackboxtest} \cite[p.~6]{6588537}. A black-box test differs from the earlier white-box tests in the fact that the implementation details of the code under test are irrelevant for the construction of the test. Since a black-box test does not require any details about the code, we can, in fact, construct the integration tests before we implement the actual feature itself. A typical example of an integration test is the communication between the front-end and the back-end side of a web application. Another example is illustrated in \Cref{lst:se-integration-test}.
 	
-\lstinputlisting[caption=Example of a Java integration test in JUnit., label=lst:se-integration-test, language=Java]{assets/listings/example-integration-test.java}
+\lstinputlisting[caption=Java integration test in JUnit., label=lst:se-integration-test, language=Java]{assets/listings/example-integration-test.java}
 
 \subsubsection{Regression tests}
 After a developer has detected a regression in the application, they will add a regression test \cite[p.~372]{8016712} to the test suite. This regression test must replicate the exact conditions and sequence of actions that have triggered the failure. The goal of this test is to prevent similar failures to occur in the future if the same conditions would reapply. An example is provided in \Cref{lst:se-regression-test}.
 
 \clearpage
 
-\lstinputlisting[caption=Example of a Java regression test in JUnit., label=lst:se-regression-test, language=Java]{assets/listings/example-regression-test.java}
+\lstinputlisting[caption=Java regression test in JUnit., label=lst:se-regression-test, language=Java]{assets/listings/example-regression-test.java}
