Fixed coverage images

--- a/paper/software-engineering.tex
+++ b/paper/software-engineering.tex
@@ -6,6 +6,7 @@
 \acrfull{ieee} defines the practice of Software Engineering as the ``Application of a systematic, disciplined, quantifiable approach to the development, operation and maintenance of software; that is, the application of engineering to software'' \cite[p.~421]{8016712}. The word ``systematic'' in this definition emphasises the need for a structured process, depicting guidelines and models that describe how we should develop software in the most efficient way possible. Such a process does exist under the name of the \acrfull{sdlc} \cite[p.~420]{8016712}. If a developer prefers not to abide by any model and act as they deem correct without following any guidelines, we employ the term \emph{Cowboy coding} \cite[p.~34]{landry2011iterative}.
 
 \input{software-engineering/sdlc.tex}
+\clearpage
 \input{software-engineering/tsa.tex}
 \newpage
 \input{software-engineering/agile-software-development.tex}
