--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -30,10 +30,16 @@
 \usepackage{tikz}
 \usepackage{tikzscale}
 \usepackage{titlesec}
+\usepackage{draftwatermark}
 \usepackage{cleveref}
 
 % Tikz libraries.
 \usetikzlibrary{arrows,arrows.meta,automata,shapes.geometric,positioning}
+
+% Watermark.
+\SetWatermarkText{Draft}
+\SetWatermarkScale{1.5}
+\SetWatermarkColor[rgb]{0.95,0.95,0.95}
 
 % Blank pages.
 \newcommand\blankpage{%
